Add some changes.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -114,7 +114,7 @@
     <div class="bg-image-container">
         <img src="https://blogs.microsoft.com/wp-content/uploads/prod/sites/73/2023/04/European-cyber-skills-header.gif" alt="Background Image" class="w-100">
         <div class="overlay-text position-absolute top-50 start-50 translate-middle text-center">
-            <h1>Welcome to Bloggify..!</h1>
+            <h1>Welcome to Bloggify...!</h1>
         </div>
     </div>
 </div>
