Add some changes in content.

--- a/src/app/components/aiml/aiml.component.html
+++ b/src/app/components/aiml/aiml.component.html
@@ -45,7 +45,7 @@
   </div>
 
    
-  <!-- ML popup Modal -->
+  <!-- AI popup Modal -->
 <div class="modal fade" id="aiModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
