--- a/src/app/components/web-app-dev/web-app-dev.component.html
+++ b/src/app/components/web-app-dev/web-app-dev.component.html
@@ -15,7 +15,7 @@
 <div class="container mb-2" >
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
         <div class="col">
-            <div class="card bg-dark text-white">
+            <div class="card bg-dark text-white"  data-bs-toggle="modal" data-bs-target="#aiModal">
                 
                 
                 <img src="https://assets-global.website-files.com/634e928d7acf0e5b9297c41b/639b2c7489b31edc4dee39ed_Social%20Media%20Messaging.webp" class="card-img-top" alt="...">
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="col">
-            <div class="card bg-dark text-white">
+            <div class="card bg-dark text-white" data-bs-toggle="modal" data-bs-target="#aiModal">
                 <img src="https://media.sproutsocial.com/uploads/2023/04/The-Complete-Guide-to-Chatbots-for-Marketing_Final.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Tech Tales: Where Knowledge Meets Inspiration.</h5>
@@ -36,7 +36,7 @@
             </div>
         </div>
         <div class="col">
-            <div class="card bg-dark text-white">
+            <div class="card bg-dark text-white" data-bs-toggle="modal" data-bs-target="#aiModal">
                 <img src="https://assets-global.website-files.com/634e928d7acf0e5b9297c41b/637b637dd2b3431f27952e66_61e7d8538d2b08435618091b_Social%2520media%2520chatbots.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Tech Talk: Explore, Learn, Create</h5>
@@ -45,6 +45,25 @@
             </div>
         </div>       
     </div>    
+  </div>
+
+    <!-- AI popup Modal -->
+<div class="modal fade" id="aiModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">What is Artificial Intelligence (AI)?</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>Welcome to our exploration of Artificial Intelligence (AI)! AI refers to the development of computer systems that can perform tasks that typically require human intelligence. These tasks include learning, reasoning, problem-solving, perception, language understanding, and decision-making.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Explore More</button>
+        </div>
+      </div>
+    </div>
   </div>
 
 <!-- Footer section -->
